posiGen_FullsendBox/src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Roof_Assessor__c</fullName>
        <inlineHelpText>Enter Assigned Roof Assesor

This field triggers an email alert when given a value.</inlineHelpText>
        <label>Roof Assessor</label>
        <picklist>
            <picklistValues>
                <fullName>KDH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Veterans Contractors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carimi Contractors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLG Solar Solutions</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Roof_Layout_Consent__c</fullName>
        <inlineHelpText>If customer request a roof layout select NO.

This field may trigger an email alert when given a value.</inlineHelpText>
        <label>Roof Layout Consent?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Roof_Layout__c</fullName>
        <inlineHelpText>Roof Layout is required when Customer Consent is No</inlineHelpText>
        <label>Roof Layout</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Roof_Type_SF2__c</fullName>
        <label>Roof Type</label>
        <picklist>
            <picklistValues>
                <fullName>Shingle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrugated Metal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seam/Standard Metal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terracotta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wood</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hurricane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flat</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Roof_Type__c</fullName>
        <description>Inbound Email Roof Type</description>
        <label>Roof Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFGA__CorrelationID__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>The Correlation ID Field is used by Salesforce for Google AdWords for automatic correlation of web information with new leads created through a standard web-to-lead form</description>
        <label>CorrelationID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFGA__Correlation_Data__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>The Correlation Data field is designed for use by Salesforce for Google AdWords to store all relevant lead tracking information about a web generated lead</description>
        <label>Correlation Data</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFGA__Web_Source__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>This field is designed for future use by Salesforce for Google AdWords as an alternative to the Lead Source field for web generated leads.</description>
        <label>Web Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Override_DupeCatcher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead Override DupeCatcher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SNProjectID__c</fullName>
        <externalId>true</externalId>
        <label>SNProjectID</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SNSolutionID__c</fullName>
        <label>SNSolutionID</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPE__c</fullName>
        <label>SPE</label>
        <picklist>
            <picklistValues>
                <fullName>J.P. Solar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jefferson Solar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N.O. Solar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Orleans Solar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northshore Solar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orleans Solar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunlight Powers My Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar Hot Water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Posigen Solar Leasing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Scheduled_Appointment_Date__c</fullName>
        <inlineHelpText>Date that the appointment is scheduled for with the client</inlineHelpText>
        <label>Scheduled Appointment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Search_Campaign__c</fullName>
        <label>Search Campaign</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Engine__c</fullName>
        <label>Search Engine</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Type__c</fullName>
        <label>Search Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signed_CUR__c</fullName>
        <description>Signed Currently</description>
        <label>Signed CUR</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Signed_Date__c</fullName>
        <label>Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Signed_MTD__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Signed this month</description>
        <label>Signed MTD</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Signed_WTD__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Signed this week</description>
        <label>Signed WTD</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Social_Security_Number__c</fullName>
        <label>Owner Social Security Number</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SolarNexus_Proposal_Fetched__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SolarNexus Proposal Fetched</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Solar_Assessments_Comments__c</fullName>
        <label>Solar Assessments Comments</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Solar_HWH_Not_Feasible_Reason_s__c</fullName>
        <inlineHelpText>Enter Solar Hot Water Heater Not Feasible Reason(s)</inlineHelpText>
        <label>Solar HWH Not Feasible Reason(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Solar_Hot_Water_Contract_Signed_Date__c</fullName>
        <inlineHelpText>Date contract was signed</inlineHelpText>
        <label>Solar Hot Water Contract Signed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Solar_Hot_Water_Contract_Signed__c</fullName>
        <description>Select the checked if Solar Hot water contract is signed.</description>
        <label>Solar Hot Water Contract  Signed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Solar_Hot_Water_Heater_Assessor__c</fullName>
        <inlineHelpText>This field triggers an email alert when given a value.</inlineHelpText>
        <label>Solar Hot Water Heater Assessor</label>
        <picklist>
            <picklistValues>
                <fullName>Carimi Solar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KDH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anders</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Solar_Hot_Water_Heater_Assigned_Date__c</fullName>
        <label>Solar Hot Water Heater Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Solar_Hot_Water_Heater_Complete_Date__c</fullName>
        <label>Solar Hot Water Heater Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Solar_Hot_Water_Heater_Unfeasible_Date__c</fullName>
        <inlineHelpText>Enter the date the Lead was notified that the Assessment was not feasible for a Solar Hot Water Heater</inlineHelpText>
        <label>Solar Hot Water Heater Unfeasible Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Solar_Panel_Unfeasible_Notification_Date__c</fullName>
        <inlineHelpText>If Roof Assessment was Unfeasible for Panels, enter date that lead was notified of the roof assessment not being feasible.</inlineHelpText>
        <label>Solar Panel Unfeasible Notification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State_text__c</fullName>
        <label>State (text)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Lead_Source__c</fullName>
        <inlineHelpText>Select the associated child lead source that reference the Parent campaigns.</inlineHelpText>
        <label>Sub Lead Source</label>
        <picklist>
            <controllingField>LeadSource</controllingField>
            <picklistValues>
                <fullName>Solar Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pure Rewards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PosiGen Vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yard Sign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PosiGen.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infomercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Door Knocking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Posigen</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submitted_CUR__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Currently Submitted</description>
        <label>Submitted CUR</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Submitted_MTD__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Submitted this month</description>
        <label>Submitted MTD</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Submitted_WTD__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Submitted this week</description>
        <label>Submitted WTD</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Submitted__c</fullName>
        <description>Contract Submitted Date</description>
        <inlineHelpText>Contract Submitted Date</inlineHelpText>
        <label>Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Submitted_for_Approval_Date__c</fullName>
        <inlineHelpText>Filed is auto populated with date after Submitted for Approval approval process is started</inlineHelpText>
        <label>Submitted for Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TimeToContact__c</fullName>
        <description>First Activity date/time and Created date/time difference.</description>
        <formula>(First_Activity_date_time__c -  CreatedDate )*24*60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time to First Contact (Minutes)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unique_Ownership_Details__c</fullName>
        <inlineHelpText>Provide as much detail regarding the ownership situation as possible to allow admin to research more.</inlineHelpText>
        <label>Unique Ownership Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Unqualified_Reason__c</fullName>
        <label>Unqualified Reason</label>
        <picklist>
            <controllingField>Status</controllingField>
            <picklistValues>
                <fullName>Not Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paperwork Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roof Assessment Not Feasible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar Hot Water Heater Not Feasible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Too Expensive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unable to Reach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Already Has Solar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of Service Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing PosiGen Customer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Utility_Account_Number__c</fullName>
        <inlineHelpText>Enter the customer utility  account number</inlineHelpText>
        <label>Utility Account Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utility_Company__c</fullName>
        <label>Utility Company</label>
        <picklist>
            <picklistValues>
                <fullName>Entergy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLECO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entergy-NOLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JDEC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLEMCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LUS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEMCO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Utility_Customer_Name__c</fullName>
        <inlineHelpText>Customer name on the bill.</inlineHelpText>
        <label>Utility Customer Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Verified_name_spellings_with_customer__c</fullName>
        <description>Verified name spellings.</description>
        <label>Verified name spellings with customer?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>arxxusleadassig__Type__c</fullName>
        <inlineHelpText>Used for assignment system.  Do not change.</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>CTWEB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LAWEB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NYWEB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BrightCurrentNY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BrightCurrentCT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BrightCurrentLA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>box__FolderID__c</fullName>
        <description>This field is used to store the folder id when the files are uploaded to BOX</description>
        <label>FolderID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>created_date_time__c</fullName>
        <label>created date/time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>created_day__c</fullName>
        <formula>CASE(MOD( DATEVALUE(CreatedDate) - DATE(1900, 1, 6), 7), 0, &quot;Saturday&quot;, 1, &quot;Sunday&quot;, 2,&quot;Monday&quot;, 3, &quot;Tuesday&quot;, 4, &quot;Wednesday&quot;, 5, &quot;Thursday&quot;, 6,&quot;Friday&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>created day</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>emma__Bounced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Error?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>emma__Emma_Member_ID__c</fullName>
        <description>Unique ID of member in the Emma system.</description>
        <label>Emma Member ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Geocode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Reference to the Geocode object holding all of mapping information for the record.</inlineHelpText>
        <label>Geocode</label>
        <referenceTo>geopointe__Geocode__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>roofcondition__c</fullName>
        <description>Condition of customers roof</description>
        <inlineHelpText>We are not able to install solar panels on roofs which may need repair.</inlineHelpText>
        <label>What is the condition of your roof?</label>
        <picklist>
            <picklistValues>
                <fullName>Not Sure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New / Fair (&lt;10 years old)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Replacing (&gt;10 years old)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>smagicinteract__SMSOptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMS Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>ALL_CT_Unconverted_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.CITY</columns>
        <columns>Municipality__c</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.ZIP</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATE_CODE</field>
            <operation>equals</operation>
            <value>CT</value>
        </filters>
        <label>ALL CT Unconverted Leads</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_New_York_Unconverted_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.CITY</columns>
        <columns>Municipality__c</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.ZIP</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATE_CODE</field>
            <operation>equals</operation>
            <value>NY</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>lead queue</value>
        </filters>
        <label>All New York Unconverted Leads</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Ambassador_Lead_Queue_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Ambassador Lead Queue</label>
        <queue>Ambassador_Lead_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Assessed_Feasible</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.LEAD_SOURCE</field>
            <operation>equals</operation>
            <value>Queen of Mary</value>
        </filters>
        <label>Assessed Feasible</label>
    </listViews>
    <listViews>
        <fullName>Assessed_Not_Released</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.STREET</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Customer_File_Approval__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Assessed- Feasible</value>
        </filters>
        <label>Assessed Not Released</label>
    </listViews>
    <listViews>
        <fullName>Assessment_Requested</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>SPE__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Assessment(s) Requested</value>
        </filters>
        <filters>
            <field>Roof_Assessor__c</field>
            <operation>equals</operation>
            <value>Veterans Contractors</value>
        </filters>
        <label>Assessment Requested</label>
    </listViews>
    <listViews>
        <fullName>Brittany_Thrash_450_Blitz</fullName>
        <columns>LEAD.FIRST_NAME</columns>
        <columns>LEAD.LAST_NAME</columns>
        <columns>LEAD.STREET</columns>
        <columns>LEAD.CITY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>10/23/2015 12:00 AM</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>Bthra</value>
        </filters>
        <label>Brittany Thrash 450 Blitz</label>
    </listViews>
    <listViews>
        <fullName>CT_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.STREET</columns>
        <columns>LEAD.CITY</columns>
        <columns>LEAD.ZIP</columns>
        <columns>LEAD.STATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATE</field>
            <operation>equals</operation>
            <value>CT</value>
        </filters>
        <label>CT Leads</label>
    </listViews>
    <listViews>
        <fullName>CT_Leads2</fullName>
        <columns>FULL_NAME</columns>
        <columns>Number_of_Activities__c</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.STREET</columns>
        <columns>LEAD.CITY</columns>
        <columns>LEAD.ZIP</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATE_CODE</field>
            <operation>equals</operation>
            <value>CT</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>lead queue</value>
        </filters>
        <label>CT Leads2</label>
        <sharedTo>
            <group>Sales_Manager</group>
            <group>Telemarketer</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CT_Untouched</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATE_CODE</field>
            <operation>equals</operation>
            <value>CT</value>
        </filters>
        <filters>
            <field>LEAD.LAST_ACTIVITY</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>LEAD.DO_NOT_CALL</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>LEAD.PHONE</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Not Qualified,Lost</value>
        </filters>
        <label>CT Untouched</label>
    </listViews>
    <listViews>
        <fullName>Christian_s_B_leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>bishop</value>
        </filters>
        <label>Christian&apos;s B leads</label>
    </listViews>
    <listViews>
        <fullName>DeRuve</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.ZIP</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>LEAD.STATE_CODE</field>
            <operation>equals</operation>
            <value>NY</value>
        </filters>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>12/4/2015 12:00 AM</value>
        </filters>
        <label>DeRuve</label>
        <queue>Lead_Queue</queue>
    </listViews>
    <listViews>
        <fullName>EMPIRE_leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.STREET</columns>
        <columns>LEAD.ZIP</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATE_CODE</field>
            <operation>equals</operation>
            <value>NY</value>
        </filters>
        <filters>
            <field>LEAD.ZIP</field>
            <operation>equals</operation>
            <value>12029,12037,12060,12075,12106,12144,12157,12184,12202,12203,12204,12205,12206,12</value>
        </filters>
        <label>EMPIRE leads</label>
        <sharedTo>
            <group>Sales_Manager</group>
            <group>Telemarketer</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Empire_Mailer_1</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.STREET</columns>
        <columns>LEAD.ZIP</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>LEAD.PHONE</field>
            <operation>notEqual</operation>
        </filters>
        <label>Empire Mailer 1</label>
        <queue>Lead_Queue</queue>
    </listViews>
    <listViews>
        <fullName>Florida_Leads</fullName>
        <columns>Number_of_Activities__c</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.STREET</columns>
        <columns>LEAD.CITY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATE_CODE</field>
            <operation>equals</operation>
            <value>FL</value>
        </filters>
        <label>Florida Leads</label>
        <sharedTo>
            <group>Sales_Group</group>
            <group>Sales_Manager</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>SF2</fullName>
        <active>true</active>
        <businessProcess>SF2</businessProcess>
        <description>Temporary - For Migrating to the new SF Implementation</description>
        <label>SF2</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Address_is_Required</fullName>
        <active>false</active>
        <description>Address fields are Required</description>
        <errorConditionFormula>AND(OR(Street = &quot;&quot;, City =&quot;&quot;,  State =&quot;&quot;,  PostalCode =&quot;&quot;), !ISPICKVAL(LeadSource,&apos;Inbound Email&apos;))</errorConditionFormula>
        <errorMessage>Address Information is Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Application_Lead_Status_Validation</fullName>
        <active>false</active>
        <description>Appointment Set Date and Scheduled Appointment Date must not be blank when Lead Status = Application</description>
        <errorConditionFormula>AND (
ISPICKVAL ( Status , &quot;Application&quot;), 
OR (
ISBLANK (   Appointment_Set_Date__c ),
ISBLANK ( Scheduled_Appointment_Date__c )
)
)</errorConditionFormula>
        <errorDisplayField>Status</errorDisplayField>
        <errorMessage>Appointment Set Date and Scheduled Appointment Date must be completed when Lead Status = Application</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Approved_Status_Validation</fullName>
        <active>false</active>
        <description>Paperwork must be approved when Lead Status = Approved</description>
        <errorConditionFormula>AND (
ISPICKVAL ( Status , &quot;Approved&quot;), 
NOT (
ISPICKVAL (  Customer_File_Approval__c, &quot;Approved&quot;)
)
)</errorConditionFormula>
        <errorDisplayField>Status</errorDisplayField>
        <errorMessage>Paperwork must be approved by Doc Control prior to Lead Status being changed to Approved</errorMessage>
    </validationRules>
</CustomObject>